--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Children''s stories, French'
 - !lcc 'PZ'
+- GITenberg
 title: Nouvelles et Contes pour la jeunesse
 url: http://www.gutenberg.org/ebooks/14309
